# nico

./: .env.example  .gitignore  AGENTS.md  DOCUMENTATION_ALIGNMENT.md  Dockerfile.api  FINAL_STATUS_REPORT.md  MERGE_COMPLETE.md  MERGE_READY.md  QUICKSTART.md  README.md  README_AGENT.md  SENIOR_ENGINEER_REVIEW.md  SETUP.md  SLCCI PLOTTER SINGLE STRAIT.ipynb  SPRINT_1.2_SUMMARY.md  catalog.yaml  demo_dashboard.py  demo_pipeline.py  docker-compose.yml  gradio_app.py  j2_utils.py  pyproject.toml  pytest.ini  requirements.txt  start.sh  start_streamlit.sh  streamlit_app.py  test_headless.py  test_streamlit_minimal.py  test_ws.py
.github/: copilot-instructions.md
.github/agents/: fullstack.agent.md  planner.agent.md  (+2 more)
api/: __init__.py  config.py  connection_pool.py  exceptions.py  logging_config.py  main.py  middleware.py  models.py  performance.py  rate_limit.py  security.py
app/: __init__.py  main.py  state.py
audit_agents/: README.md  __init__.py  data_flow_auditor.py  orchestrator.py  run_all.py
audit_reports/: AUDIT_REPORT.md  audit_report.json
config/: gate_passes.yaml  gates.yaml
data/: README.md  knowledge_cache.json
docs/: AGENT_FULLSTACK.md  AGENT_GATES.md  AGENT_LAYER_ARCHITECTURE.md  API_USAGE.md  API_VERSIONING.md  ARCHITECTURE.md  ARCHITECTURE_GAP.md  AUDIT_REPORT_2026-01-03.md  BRANCH_STRATEGY.md  CHANGELOG.md  CHAT_HISTORY.md  CONTRIBUTING.md  COPILOT_PRO_PLUS_GUIDE.md  COSMOGRAPH_REFERENCE.md  DATASET_CONFIG.md  FEATURE_INVENTORY.md  INVESTIGATION_LOGGING.md  KNOWLEDGE_GRAPH_EXPLORER.md  KNOWLEDGE_SYSTEM.md  MODELS.md  NEXT_STEPS_GRAPH_UX.md  NOTES_ALESSIO.md  OBSOLETE_BRANCHES.md  PROGRESS.md  PROJECT_AUDIT_ARCHITECTURE.md  REFACTORING_ROADMAP.md  ROADMAP_UNIFIED_ARCHITECTURE.md  SURGE_SHAZAM_ARCHITECTURE.md  SYSTEM_STATUS.md  UNIFIED_DATA_PIPELINE.md  VISUALIZATION_ARCHITECTURE.md
experiments/: cross_region_experiment.py  cross_region_results.json  fram_strait_experiment.py  fram_strait_results.json  historical_episode_analysis.py  lago_maggiore_pipeline.py
frontend/: .env.development  .env.example  .env.production  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
legacy/: README.md
notebooks/: README.md  lago_maggiore_2000_test.py
scripts/: check_surrealdb.py  compute_gate_passes.py  quick_test.py  quick_test_cmems.py  seed_knowledge_graph.py  tab_audit.py  test_cmems_optimizations.py  test_comparison_mode.py  test_full_audit.py
tests/: conftest.py  run_investigation_tests.py  test_analysis.py  test_backends.py  test_core_models.py  test_gate_service.py  test_loaders.py  test_resolver.py
(+209 files in other folders)
