[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slcci-altimetry"
version = "1.0.0"
description = "SLCCI Satellite Altimetry Analysis Toolkit"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SLCCI Analysis Team"}
]
keywords = [
    "satellite",
    "altimetry",
    "oceanography",
    "sea-level",
    "netcdf",
    "jason",
    "climate"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "scipy>=1.10.0",
    "plotly>=5.14.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
geo = [
    "geopandas>=0.14.0",
    "cartopy>=0.22.0",
    "shapely>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = [
    "slcci-altimetry[geo,dev]",
]

[project.scripts]
slcci = "src.cli:main"

[project.urls]
Documentation = "https://github.com/user/slcci-altimetry#readme"
Source = "https://github.com/user/slcci-altimetry"

[tool.hatch.build.targets.wheel]
packages = ["src", "app"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]
